src/test/deca/context/invalid/test_error_3.13.deca
// Description:
//    Soulève l'erreur (3.13)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : Paramètre de même nom (règle 3.13)
//
// Historique:
//      cree le 14/01/2022

Class A {
    int Get(int i, int i);
}
{
}
